--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <title>Good Natured Enchanting Shrew</title>
-    <meta property="og:title" content="Good Natured Enchanting Shrew" />
+    <meta property="og:title" content="Wattch" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta charset="utf-8" />
     <meta property="twitter:card" content="summary_large_image" />
@@ -86,22 +86,22 @@
   
   </head>
   <body>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="client/style.css" />
     <div>
-      <link href="./index.css" rel="stylesheet" />
+      <link href="client\index.css" rel="stylesheet" />
 
       <div class="home-container">
         <div class="home-sidebar">
           <img
             alt="image"
-            src="public/wattch%20logo-200h.png"
+            src="client/public/wattch%20logo-200h.png"
             class="home-image"
           />
           <span class="home-text">NAVIGATION</span>
           <button type="button" class="home-input-button button" onclick="scrollToInput()">
             <img
               alt="image"
-              src="public/sign-in(1)-200h.png"
+              src="client/public/sign-in(1)-200h.png"
               class="home-image1"
             />
             <span class="home-input-text">Input Data</span>
@@ -109,7 +109,7 @@
           <button type="button" class="home-results-button button" onclick="scrollToResults()">
             <img
               alt="image"
-              src="public/graph(1)-200h.png"
+              src="client/public/graph(1)-200h.png"
               class="home-image2"
             />
             <span class="home-results-text">Results</span>
@@ -135,7 +135,7 @@
                 <div class="home-results-graph">
                   <img
                     alt="image"
-                    src="public/screenshot%202024-02-28%20113435-1000w.png"
+                    src="client/public/screenshot%202024-02-28%20113435-1000w.png"
                     class="home-image3"
                   />
                 </div>
